<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ed_prp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <EditText
        android:id="@+id/ed_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/les_actualit_s_en_tunisie"
        app:layout_constraintBottom_toTopOf="@+id/ed_pre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_ac" />

    <EditText
        android:id="@+id/ed_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Accueil"
        app:layout_constraintBottom_toTopOf="@+id/ed_act"
        app:layout_constraintEnd_toStartOf="@+id/ed_menu1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <EditText
        android:id="@+id/ed_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/covid_presentation"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_act" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="236dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/a_propos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ed_ac"
        app:layout_constraintTop_toBottomOf="@+id/ed_pre" />


    <TextView
        android:id="@+id/ed_menu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="27dp"
        android:text="@string/menu"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toStartOf="@+id/divider5"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName6"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/ed_ac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_menu1" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="175dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ed_menu1"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>